--- a/front/styles.css
+++ b/front/styles.css
@@ -44,6 +44,11 @@ body {
     font-size: 3rem;
 }
 
+.display2 {
+    font-family: 'Invisible';
+    font-size: 2.5rem;
+}
+
 .button{
     font-family: 'Arial';
     font-weight: bold;
